# gcu-gimbal-mcp

./: README.md  README.zh.md  e_urdf.json  manifest.json  pyproject.toml
.claude-flow/data/: pending-insights.jsonl
config/: mcp_config.json
prompts/: system.md  tools_usage.md
src/: gimbal_mcp_server.py
