[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosclaw-gimbal-mcp"
version = "0.1.0"
description = "ROSClaw MCP Server for GCU Camera Gimbal via Serial protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "robotics", "gimbal", "serial", "camera", "gcu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[fastmcp]>=1.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
rosclaw-gimbal-mcp = "gimbal_mcp_server:main"

[project.urls]
Homepage = "https://github.com/ros-claw/rosclaw-gimbal-mcp"
Repository = "https://github.com/ros-claw/rosclaw-gimbal-mcp"
Issues = "https://github.com/ros-claw/rosclaw-gimbal-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
